--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Invasio - Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 40px auto;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #333;
+        }
+    </style>
+</head>
+<body>
 
+<h1>Privacy Policy for Invasio</h1>
+<p><strong>Last updated:</strong> &lt;insert date&gt;</p>
+
+<p>
+    This Privacy Policy explains how the mobile game <strong>Invasio</strong> (“the App”) 
+    handles user data. The App is developed and published by <strong>&lt;your developer name&gt;</strong>.
+</p>
+
+<h2>Information Collection and Use</h2>
+<p>
+    <strong>Invasio does not collect, store, use, or share any personal data.</strong><br>
+    The App does not request or gather any personally identifiable information from users.
+    The game operates entirely offline.
+</p>
+
+<h2>Local Game Data</h2>
+<p>
+    The App stores a small amount of data <strong>locally on your device</strong>, including:
+</p>
+<ul>
+    <li>Game progress</li>
+    <li>Settings and preferences</li>
+</ul>
+<p>
+    This data never leaves your device and is not accessible to the developer or any third party.
+</p>
+
+<h2>No Internet Connection</h2>
+<p>
+    The App does <strong>not</strong> use an internet connection and does not communicate 
+    with any external servers or services.
+</p>
+
+<h2>Children’s Privacy</h2>
+<p>
+    The App does not collect any personal data from children or adults. 
+    It is safe for users of all ages.
+</p>
+
+<h2>Changes to This Privacy Policy</h2>
+<p>
+    This Privacy Policy may be updated from time to time. Any changes will be posted 
+    on this page with an updated “Last updated” date.
+</p>
+
+<h2>Contact</h2>
+<p>
+    If you have any questions about this Privacy Policy, you may contact the developer at:<br>
+    <strong>&lt;your contact email&gt;</strong>
+</p>
+
+</body>
+</html>
