--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <h1>Privacy Policy for Invasio</h1>
-<p><strong>Last updated: November 19, 2025</strong> &lt;insert date&gt;</p>
+<p><strong>Last updated: November 19, 2025</strong></p>
 
 <p>
     This Privacy Policy explains how the mobile game <strong>Invasio</strong> (“the App”) 
