--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <p>
     This Privacy Policy explains how the mobile game <strong>Invasio</strong> (“the App”) 
-    handles user data. The App is developed and published by <strong>&lt;your developer name&gt;</strong>.
+    handles user data. The App is developed and published by <strong>Manuel Sturzenegger</strong>.
 </p>
 
 <h2>Information Collection and Use</h2>
@@ -66,7 +66,7 @@
 <h2>Contact</h2>
 <p>
     If you have any questions about this Privacy Policy, you may contact the developer at:<br>
-    <strong>&lt;your contact email&gt;</strong>
+    <strong>dev.mst.apps@gmail.com</strong>
 </p>
 
 </body>
